2semestre/C/P/bloco2/b2_04/PrefixCalculator.g4
grammar PrefixCalculator;

program: 
        stat* EOF;              // Zero or more repetitions of stat

stat: 
        expr? NEWLINE;          // Optative expr followed by an end-of-line

expr: 
        op=('*'|'/'|'+'|'-') expr expr  #ExprPrefix
        | Number                        #ExprNumber
        ;

Number: 
        [0-9]+('.'[0-9]+)?;     // fixed point real number

NEWLINE: 
        '\r'? '\n';

WS: 
        [ \t]+ -> skip;
